--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -2,8 +2,7 @@
     "name": "portfolio",
     "compatibility_date": "2024-09-23",
     "assets": {
-        "directory": "./out",
-        "binding": "ASSETS"
+        "directory": "./out"
     },
     "observability": {
         "enabled": true
